add templates for future reviews

--- a/reviews/_posts/2020-05-01-re3.md
+++ b/reviews/_posts/2020-05-01-re3.md
@@ -26,6 +26,10 @@ price: $46.79 (pre-order)
 
 **total score: 8/10**
 
+**hours spent on the game: 40 hours**
+
+**platinumed? yes**
+
 
 To preface this review: I never played the original game (Resident Evil 3: Nemesis) released in 1999 for the Playstation. As such, I played this game for what it is as a standalone, not in comparison to what it was back in 1999 nor to the Resident Evil 2 Remake from 2019. 
 
