--- a/reviews/_posts/2020-05-15-ff7.md
+++ b/reviews/_posts/2020-05-15-ff7.md
@@ -18,13 +18,13 @@ price: $45.77 (pre-order)
 - visual: 10/10
 - audio: 10/10
 - gameplay: 9/10
-- narrative: 6.5/10
+- narrative: 7/10
 - challenge: 8/10
 - replayability: 7/10
 - value: 8/10
 - personal grade: 9/10
 
-**total score: 8.4/10**
+**total score: 8.5/10**
 
 **hours spent on the game: 75 hours**
 
@@ -40,4 +40,23 @@ music:
 - main theme of final fantasy vii
 - flowers blooming in the church
 
-coming soon
+To preface this review, I never played the original game (Final Fantasy VII) released in 1997 for the Playstation. As such, I played this game for what it is as a standalone, not in comparison to what it was back in 1997. However, for a game revolving so much around character development and storytelling, I felt compelled to play through the original game, so a review/comparison of that will be coming soon! This review will (hopefully) be based solely on the remake though.
+
+Final Fantasy is a Japanese role playing game series known for its world building, characterisation, music, and storytelling. Each Final Fantasy has its own universe and story, and tends to focus on a group of characters from seemingly different backgrounds who come together to save their world from destruction or domination by a central antagonist. Final Fantasy VII is no different, as the story has many depths to uncover, secrets to tell, twists to discover, and characters to grow attached to.
+
+You play as Cloud Strife, an arrogant, proud, and mostly quiet mercenary at first. He is uninterested in anything beyond his job and getting paid.  He later discovers more about his past and, with the help of his friends and through his hardships, learns there is more to being a hero than possessing physical strength and fame, developing compassion for the planet and people he fights to protect. Cloud joins an eco-terrorist organization called AVALANCHE to stop a megacorporation known as Shinra Electric Company from using the planet's life essence as an energy source. The events of Final Fantasy VII Remake only take place in Midgar, which makes up about 10% of the original game’s events.
+
+Although there are plenty of side quests and missions to do to keep the playthrough exciting, this game is not “open world” and runs fairly linear. Usually, “open world” is a mechanic utilized in games so that the player can freely explore and approach objectives as opposed to a structured storyline. Open world games, when done well, foster emergent gameplay as no two players will experience the world in the same fashion. In Final Fantasy VII Remake, certain dialogue choices and decisions can affect minor events but the overall structure of the story is straightforward. There are quite a number of unique mini-games that can get quite hard if you are looking for a break from the direct story. More importantly, despite not being an open world, the world of Final Fantasy VII feels… full. The citizens of Midgar populate the streets you walk by, having their conversations that you can listen in on and sometimes interact with. Though a small detail in the big picture, it makes the atmosphere of the game that much better, making you feel like you’re living in Midgar yourself.
+
+Final Fantasy VII is a visually stunning game and the graphics quality and animations done for this game are nothing short of amazing. There are seamless transitions between cutscenes and gameplay that make you feel as if you are watching a movie. One very minor nitpick is that there are a lot of cutscenes, so much that it may feel very slow for you.
+
+There are 4 game modes offered: Classic, Easy, Normal and Hard. Classic Mode is the equivalent of setting the difficulty to Easy, with the exception that all of your characters move around, block, and attack automatically as they are controlled by the AI. The only thing for the player to do is cast spells or use items. This is the developer’s effort to make the game as “turn-based” as possible, which pays homage to the original turn-based Final Fantasy VII game. It doesn’t do a great job though… While Easy and Normal modes are fairly self-explanatory, Hard mode is only unlocked after you beat the game on any other mode. The difficulty spike that comes with Hard mode is: enemies are stronger; you cannot use items; and MP (used to cast spells) is not restored at benches. Benches are locations that your characters can rest at to restore HP and MP. The extra incentive for players to complete the game on Hard mode are the secret boss fights only available in that difficulty. Hard mode is fair, challenging, fun, and overall an improvement from Easy and Normal, as it makes gameplay more tactical and calculated and punishes you for button mashing.
+
+Originally, all Final Fantasy games utilized “turn-based” mechanics in terms of gameplay. However, Final Fantasy VII Remake’s combat system utilizes a quasi turn-based and real-time system. Regular attacks are performed in real time. However, when casting a spell, executing an ability, or using an item, you are able to “pause” the game to select which action you want each character to perform. This new hybrid combat system is inspired by the well-known and widely-used battle system called Active Time Battle (ATB) which in itself is already a pseudo-turn-based combat system. Originally introduced in Final Fantasy IV,  ATB allows characters to perform an action when the gauge is full. The fill rate is affected by stats, status effects, abilities used and other factors requiring the player to be economical with time, thus making it a pseudo-turn-based system.
+
+Perhaps what made me fall in love with this game was its beautiful soundtrack. Each piece just makes you feel so reminiscent, nostalgic and emotional. There’s even a side quest that sends you to find music discs to be played in a jukebox! The music of Final Fantasy VII Remake consists of orchestral as well as synth pieces and is what may very well define the game along with its story. The remake pays homage to the soundtrack of the original game with new remixes as well as introduces a new score by Nobuo Uematsu, Masashi Hamauzu and Mitsuto Suzuki. In addition to the music, the voice acting quality is also amazing. Each voice really matches the personality and image of each character. The voice really makes the characters, the characters! Although the voice acting cast for the remake is entirely different from the cast from before, I have faith for the next generation of voice actors for Final Fantasy VII.
+
+My first playthrough of Final Fantasy VII clocked in at around 35 hours, doing all the side quests I could. I platinumed the game at 75 hours, beating the game on Hard mode, defeating the secret boss, and collecting all collectibles. After beating the game for the first time, you will unlock Chapter Select and Hard Mode. Chapter Select allows you to replay a particular chapter instead of having to restart the game over again in case you missed anything in your first playthrough. 
+
+I very much enjoyed and cherished playing Final Fantasy VII Remake. Since Final Fantasy VII Remake only makes up about 10% of the original, I am curious what the future parts to the remake will have in store. In addition, the ending of the story in this game ends up being divergent from the original game, so it is unknown whether the future remakes will align with that of the original. Although I said I would write this review solely based on this game alone, and not the original, I cannot help but do so because the game relies very heavily on its narrative and storytelling. Without revealing any spoilers, this game introduced an entity known as “The Whispers”, which are basically arbiters of fate that enforce the course of destiny or basically keep the timeline of the remake to be the same as the original. Certain events that occur in the remake cause a disruption in the timeline that may very much not align with that of the original Final Fantasy VII. Given the title Final Fantasy VII Remake, players hold the expectation that the events in the original are held to the same fate as in the remake. If the developers wanted to make a re-rendition of Final Fantasy VII, perhaps they should have named it differently. Nonetheless, I am looking forward to the next installment in the now confirmed trilogy of remakes of Final Fantasy VII.
+
