--- a/reviews/_posts/2020-05-15-ff7.md
+++ b/reviews/_posts/2020-05-15-ff7.md
@@ -46,9 +46,9 @@ Final Fantasy is a Japanese role playing game series known for its world buildin
 
 You play as Cloud Strife, an arrogant, proud, and mostly quiet mercenary at first. He is uninterested in anything beyond his job and getting paid.  He later discovers more about his past and, with the help of his friends and through his hardships, learns there is more to being a hero than possessing physical strength and fame, developing compassion for the planet and people he fights to protect. Cloud joins an eco-terrorist organization called AVALANCHE to stop a megacorporation known as Shinra Electric Company from using the planet's life essence as an energy source. The events of Final Fantasy VII Remake only take place in Midgar, which makes up about 10% of the original game’s events.
 
-Although there are plenty of side quests and missions to do to keep the playthrough exciting, this game is not “open world” and runs fairly linear. Usually, “open world” is a mechanic utilized in games so that the player can freely explore and approach objectives as opposed to a structured storyline. Open world games, when done well, foster emergent gameplay as no two players will experience the world in the same fashion. In Final Fantasy VII Remake, certain dialogue choices and decisions can affect minor events but the overall structure of the story is straightforward. There are quite a number of unique mini-games that can get quite hard if you are looking for a break from the direct story. More importantly, despite not being an open world, the world of Final Fantasy VII feels… full. The citizens of Midgar populate the streets you walk by, having their conversations that you can listen in on and sometimes interact with. Though a small detail in the big picture, it makes the atmosphere of the game that much better, making you feel like you’re living in Midgar yourself.
+Although there are plenty of side quests and missions to do to keep the playthrough exciting, this game is not “open world” and runs fairly linear. Usually, “open world” is a mechanic utilized in games so that the player can freely explore and approach objectives as opposed to following a structured storyline. Open world games, when done well, foster emergent gameplay as no two players will experience the world in the same fashion. In Final Fantasy VII Remake, certain dialogue choices and decisions can affect minor events but the overall structure of the story is straightforward. There are quite a number of unique mini-games that can get quite hard if you are looking for a break from the direct story. More importantly, despite not being an open world, the world of Final Fantasy VII feels… full. The citizens of Midgar populate the streets you walk by, having their conversations that you can listen in on and sometimes even join. Though a small detail in the big picture, it makes the atmosphere of the game that much better, making you feel like you’re living in Midgar yourself.
 
-Final Fantasy VII is a visually stunning game and the graphics quality and animations done for this game are nothing short of amazing. There are seamless transitions between cutscenes and gameplay that make you feel as if you are watching a movie. One very minor nitpick is that there are a lot of cutscenes, so much that it may feel very slow for you.
+Final Fantasy VII is a visually stunning game and the graphics quality and animations done for this game are nothing short of amazing. There are seamless transitions between cutscenes and gameplay that make you feel as if you are watching a movie. One very minor nitpick is that there are a lot of cutscenes, so much so that it may feel very slow for you.
 
 There are 4 game modes offered: Classic, Easy, Normal and Hard. Classic Mode is the equivalent of setting the difficulty to Easy, with the exception that all of your characters move around, block, and attack automatically as they are controlled by the AI. The only thing for the player to do is cast spells or use items. This is the developer’s effort to make the game as “turn-based” as possible, which pays homage to the original turn-based Final Fantasy VII game. It doesn’t do a great job though… While Easy and Normal modes are fairly self-explanatory, Hard mode is only unlocked after you beat the game on any other mode. The difficulty spike that comes with Hard mode is: enemies are stronger; you cannot use items; and MP (used to cast spells) is not restored at benches. Benches are locations that your characters can rest at to restore HP and MP. The extra incentive for players to complete the game on Hard mode are the secret boss fights only available in that difficulty. Hard mode is fair, challenging, fun, and overall an improvement from Easy and Normal, as it makes gameplay more tactical and calculated and punishes you for button mashing.
 
@@ -59,4 +59,3 @@ Perhaps what made me fall in love with this game was its beautiful soundtrack. E
 My first playthrough of Final Fantasy VII clocked in at around 35 hours, doing all the side quests I could. I platinumed the game at 75 hours, beating the game on Hard mode, defeating the secret boss, and collecting all collectibles. After beating the game for the first time, you will unlock Chapter Select and Hard Mode. Chapter Select allows you to replay a particular chapter instead of having to restart the game over again in case you missed anything in your first playthrough. 
 
 I very much enjoyed and cherished playing Final Fantasy VII Remake. Since Final Fantasy VII Remake only makes up about 10% of the original, I am curious what the future parts to the remake will have in store. In addition, the ending of the story in this game ends up being divergent from the original game, so it is unknown whether the future remakes will align with that of the original. Although I said I would write this review solely based on this game alone, and not the original, I cannot help but do so because the game relies very heavily on its narrative and storytelling. Without revealing any spoilers, this game introduced an entity known as “The Whispers”, which are basically arbiters of fate that enforce the course of destiny or basically keep the timeline of the remake to be the same as the original. Certain events that occur in the remake cause a disruption in the timeline that may very much not align with that of the original Final Fantasy VII. Given the title Final Fantasy VII Remake, players hold the expectation that the events in the original are held to the same fate as in the remake. If the developers wanted to make a re-rendition of Final Fantasy VII, perhaps they should have named it differently. Nonetheless, I am looking forward to the next installment in the now confirmed trilogy of remakes of Final Fantasy VII.
-
