--- a/reviews/_posts/2020-05-15-ff7.md
+++ b/reviews/_posts/2020-05-15-ff7.md
@@ -15,6 +15,12 @@ release date: april 10th, 2020
 
 price: $45.77 (pre-order)
 
+msrp: $59.99
+
+platforms: ps4
+
+reviewed on: ps4
+
 - visual: 10/10
 - audio: 10/10
 - gameplay: 9/10
@@ -25,6 +31,8 @@ price: $45.77 (pre-order)
 - personal grade: 9/10
 
 **total score: 8.5/10**
+
+**buy at full price, sale, never: full price**
 
 **hours spent on the game: 75 hours**
 
