--- a/reviews/_posts/2020-06-01-rfta.md
+++ b/reviews/_posts/2020-06-01-rfta.md
@@ -13,7 +13,13 @@ developer: gunfire games
 
 release date: august 19th, 2019
 
-price: $23.99
+price: $23.99 (sale)
+
+msrp: $39.99
+
+platforms: pc, ps4, xbox1
+
+reviewed on: pc
 
 - visual: 8/10
 - audio: 7/10
@@ -26,7 +32,9 @@ price: $23.99
 
 **total score: 7.7/10**
 
-**hours spent on the game: 43 hours**
+**buy at full price, sale, never: sale**
+
+**hours spent on the game: 46 hours**
 
 **platinumed? yes (not including dlc)**
 
