--- a/reviews/_posts/2020-06-15-re7.md
+++ b/reviews/_posts/2020-06-15-re7.md
@@ -10,8 +10,8 @@ categories: self
 resident evil 7: biohazard gold edition
 
 includes 
-- dlc: banned footage volume 1
-- dlc: banned footage volume 2
+- dlc: banned footage volume 1 -> nightmare, bedroom, ethan must die
+- dlc: banned footage volume 2 -> 21, daughters, jack's 55th birthday
 - dlc: end of zoe
 - dlc: not a hero
 
@@ -19,21 +19,29 @@ developer: capcom
 
 release date: january 23rd, 2017
 
-price: $16.99
+price: $16.99 (sale)
 
-- visual: /10
-- audio: /10
-- gameplay: /10
-- narrative: /10
-- challenge: /10
-- replayability: /10
-- value: /10
-- personal grade: /10
+msrp: $89.99 ($59.99 for base game, $29.99 for season pass)
 
-**total score: /10**
+platforms: pc, ps4, xbox1
 
-**hours spent on the game: n/a hours**
+reviewed on: pc
 
-**platinumed? n/a**
+- visual: 10/10
+- audio: 10/10
+- gameplay: 10/10
+- narrative: 9/10
+- challenge: 9/10
+- replayability: 9/10
+- value: 10/10
+- personal grade: 10/10
+
+**total score: 9.63/10**
+
+**buy at full price, sale, never: sale**
+
+**hours spent on the game: 72 hours**
+
+**platinumed? yes**
 
 coming soon
