--- a/reviews/_posts/2020-05-01-re3.md
+++ b/reviews/_posts/2020-05-01-re3.md
@@ -15,6 +15,12 @@ release date: april 3rd, 2020
 
 price: $46.79 (pre-order)
 
+msrp: $59.99
+
+platforms: pc, ps4, xbox1
+
+reviewed on: pc
+
 - visual: 9/10
 - audio: 7/10
 - gameplay: 9/10
@@ -25,6 +31,8 @@ price: $46.79 (pre-order)
 - personal grade: 8/10
 
 **total score: 8/10**
+
+**buy at full price, sale, never: sale**
 
 **hours spent on the game: 40 hours**
 
