--- a/reviews/_posts/2020-07-27-mos.md
+++ b/reviews/_posts/2020-07-27-mos.md
@@ -60,6 +60,6 @@ Though there are collectable items to look out for in the game, I am unsure whet
 
 My first playthrough of the game took around 6 hours. Given that I have played many survival horror games in the past, I will assume the average gamer would take around 7-8 hours to complete the game in their first playthrough. Since this is a survival horror game, I can definitely see this game being used by hardcore gamers to speed-run. However, during my playthrough of the game, I experienced frame drops during certain areas of the game. Fortunately, no bugs nor crashes occurred during my playthrough. For reference, my PC setup runs on a GTX1070.
 
-Maid of Sker is very big on audio cues and music. Heck, if you pre-order the game you get an entire soundtrack of folk hyms to listen to. Much of the story is driven by music sheets, instruments, and singing that are woven into the narrative. The music itself is tense, terrifying, immersive and beautiful. As you venture your way through the hotel, the floors creak, the winds chime, and the footsteps of nearby enemies can be heard, never making you feel truly safe. The only sort of solace you will find is in each phonograph room, always located behind a familiar green door. You will discover the truth behind all of this music after you play through the game for yourself!
+Maid of Sker is very big on audio cues and music. Heck, if you pre-order the game you get an entire soundtrack of folk hymns to listen to. Much of the story is driven by music sheets, instruments, and singing that are woven into the narrative. The music itself is tense, terrifying, immersive and beautiful. As you venture your way through the hotel, the floors creak, the winds chime, and the footsteps of nearby enemies can be heard, never making you feel truly safe. The only sort of solace you will find is in each phonograph room, always located behind a familiar green door. You will discover the truth behind all of this music after you play through the game for yourself!
 
 Maid of Sker was an overall delight to play, even more so considering that this game is not a Triple-A game and set at a very reasonable price. It is very much well worth the price tag if you are into stealthy survival horror, and enjoy figuring out the lore and mystery behind a well known British folk legend. I greatly enjoyed the music, the narrative and the unique gameplay elements that this game introduced.
