--- a/reviews/_posts/2020-06-15-re7.md
+++ b/reviews/_posts/2020-06-15-re7.md
@@ -35,10 +35,11 @@ reviewed on: pc
 - replayability: 9/10
 - value: 10/10
 - personal grade: 10/10
+- was it scary? yes +1
 
-**total score: 9.63/10**
+**total score: 9.75/10**
 
-**buy at full price, sale, never: sale**
+**buy at full price, sale, never: full**
 
 **hours spent on the game: 72 hours**
 
