--- a/reviews/_posts/2020-07-27-mos.md
+++ b/reviews/_posts/2020-07-27-mos.md
@@ -25,17 +25,18 @@ platforms: pc, ps4, xbox1
 reviewed on: pc
 
 - visual: 8/10
-- audio: 9/10
+- audio: 8/10
 - gameplay: 8/10
 - narrative: 8/10
-- challenge: 9/10
+- challenge: 8/10
 - replayability: 6/10
 - value: 8/10
 - personal grade: 8/10
+- was it scary? not really so -1
 
-**total score: 8/10**
+**total score: 7.63/10**
 
-**buy at full price, sale, never: full**
+**buy at full price, sale, never: sale**
 
 **hours spent on the game: 10 hours**
 
