--- a/reviews/_posts/2020-08-06-got.md
+++ b/reviews/_posts/2020-08-06-got.md
@@ -64,5 +64,5 @@ Though the open world presented on the island of Tsushima is gorgeous and breath
 
 There are 4 different modes offered in Ghost of Tsushima: Easy, Medium, Hard and Lethal. I completed my platinum playthrough on Hard and will play through again on Lethal.  You can switch between difficulties at any time in the settings menu. Easy and Medium are both well-balanced for players who want to play through the game mostly for the story and open world. Hard mode is a treat for players who want a bit of challenge and Lethal (a mode added in a later patch) punishes players heavily for their mistakes while also increasing the player’s damage. This game currently does not offer new game plus nor the option to skip cutscenes, greatly reducing replayability. The added Lethal difficulty level and two different endings incentivize players to play through a second time. Aside from the main and side missions, there are also a lot of collectibles and easter eggs to obtain, some of which require exploration, platforming or puzzle solving. 
 
-Ghost of Tsushima is a densely-packed journey that ends in spectacular fashion. Its satisfying combat, visual excellence and deep storytelling allow for a great conclusion to the PS4 Era. It is amazing that this game is only 40 gigabytes in size, as other open world games of similar visual caliber such as Red Dead Redemption 2 are over 100 gigabytes. Its minimalistic HUD, the flowing wind that guides you in the right direction, the unlimited freedom of weaponry and technique, and the heart-wrenching narrative makes the cinematic, visual, and gameplay experience much more immersive. The game’s absence of new game plus, an option to skip cutscenes, and an in-game timer are minor issues that I hope the developers would address in future updates. I encourage you to traverse the beautiful world for yourself, riding your horse, katana in one hand and the camera button in the other.
+Ghost of Tsushima is a densely-packed journey that ends in spectacular fashion. Its satisfying combat, visual excellence and deep storytelling allow for a great conclusion to the PS4 Era. It is amazing that this game is only 40 gigabytes in size, as other open world games of similar visual caliber such as Red Dead Redemption 2 are over 100 gigabytes. Its minimalistic HUD, the flowing wind that guides you in the right direction, the unlimited freedom of weaponry and technique, and the heart-wrenching narrative makes the cinematic, visual, and gameplay experience much more immersive. The game’s absence of new game plus, an option to skip cutscenes, and an in-game timer are minor issues that I hope the developers will address in future updates. I encourage you to traverse the beautiful world for yourself, riding your horse, katana in one hand and the camera button in the other.
 
