--- a/reviews/_posts/2020-08-27-tlou2.md
+++ b/reviews/_posts/2020-08-27-tlou2.md
@@ -9,12 +9,11 @@ categories: self
 
 the last of us part ii
 
-
 developer: naughty dog
 
 release date: june 19, 2020
 
-price: $2.86 (ty amex)
+price: $2.86 (ty aep)
 
 msrp: $59.99
 
@@ -25,16 +24,27 @@ reviewed on: ps4
 - visual: 10/10
 - audio: 10/10
 - gameplay: 9/10
-- narrative: 9/10
+- narrative: 8/10
 - challenge: 9/10
 - replayability: 7/10
 - value: 9/10
 - personal grade: 10/10
 
-**total score: 9.13/10**
+**total score: 9/10**
 
 **buy at full price, sale, never: full**
 
-**hours spent on the game: n/a**
+**hours spent on the game: 40 hours (and counting)**
 
-**platinumed? in progress**
+**platinumed? yes (grounded mode in progress)**
+
+music: 
+- true faith - new order
+- through the valley - shawn james
+- little sadie - crooked still
+- ain't no grave - crooked still
+- wayfaring stranger - johnny cash
+- future days - pearl jam
+- take on me - a-ha
+
+
