--- a/reviews/_posts/2020-08-06-got.md
+++ b/reviews/_posts/2020-08-06-got.md
@@ -18,7 +18,7 @@ developer: sucker punch production
 
 release date: july 17, 2020
 
-price: free (thank you j.k.)
+price: free (ty j.k.)
 
 msrp: $59.99
 
