--- a/reviews/_posts/2020-08-27-tlou2.md
+++ b/reviews/_posts/2020-08-27-tlou2.md
@@ -28,7 +28,8 @@ reviewed on: ps4
 - challenge: 9/10
 - replayability: 7/10
 - value: 9/10
-- personal grade: 10/10
+- personal grade: 9/10
+- was it scary? yes +1
 
 **total score: 9/10**
 
