add buncha reviews

--- a/reviews/_posts/2020-05-01-re3.md
+++ b/reviews/_posts/2020-05-01-re3.md
@@ -11,13 +11,17 @@ resident evil 3 remake + resident evil resistance
 
 developer: capcom
 
+genre: survival horror
+
+multiplayer/co-op: no
+
 release date: april 3rd, 2020
 
 price: $46.79 (pre-order)
 
 msrp: $59.99
 
-platforms: pc, ps4, xbox1
+platforms: pc, playstation, xbox
 
 reviewed on: pc
 
