--- a/reviews/_posts/2020-05-15-ff7.md
+++ b/reviews/_posts/2020-05-15-ff7.md
@@ -11,6 +11,10 @@ final fantasy vii remake
 
 developer: square enix
 
+genre: action role-playing
+
+multiplayer/co-op: no
+
 release date: april 10th, 2020
 
 price: $45.77 (pre-order)
