--- a/reviews/_posts/2020-06-01-rfta.md
+++ b/reviews/_posts/2020-06-01-rfta.md
@@ -11,13 +11,17 @@ remnant: from the ashes
 
 developer: gunfire games
 
+genre: action role-playing third person shooter
+
+multiplayer/co-op: yes
+
 release date: august 19th, 2019
 
 price: $23.99 (sale)
 
 msrp: $39.99
 
-platforms: pc, ps4, xbox1
+platforms: pc, playstation, xbox
 
 reviewed on: pc
 
