--- a/reviews/_posts/2020-06-15-re7.md
+++ b/reviews/_posts/2020-06-15-re7.md
@@ -17,13 +17,17 @@ includes
 
 developer: capcom
 
+genre: survival horror
+
+multiplayer/co-op: no
+
 release date: january 23rd, 2017
 
 price: $16.99 (sale)
 
 msrp: $89.99 ($59.99 for base game, $29.99 for season pass)
 
-platforms: pc, ps4, xbox1
+platforms: pc, playstation, xbox
 
 reviewed on: pc
 
