--- a/reviews/_posts/2020-07-27-mos.md
+++ b/reviews/_posts/2020-07-27-mos.md
@@ -14,13 +14,17 @@ includes
 
 developer: wales interactive
 
+genre: survival horror
+
+multiplayer/co-op: no
+
 release date: july 28, 2020
 
 price: free (review code) $22.49 (pre-order)
 
 msrp: $24.99
 
-platforms: pc, ps4, xbox1
+platforms: pc, playstation, xbox
 
 reviewed on: pc
 
