--- a/reviews/_posts/2020-08-06-got.md
+++ b/reviews/_posts/2020-08-06-got.md
@@ -16,6 +16,10 @@ includes
 
 developer: sucker punch production
 
+genre: open world action adventure
+
+multiplayer/co-op: yes (legends mode)
+
 release date: july 17, 2020
 
 price: free (ty j.k.)
