--- a/reviews/_posts/2020-08-27-tlou2.md
+++ b/reviews/_posts/2020-08-27-tlou2.md
@@ -11,6 +11,10 @@ the last of us part ii
 
 developer: naughty dog
 
+genre: action survival horror
+
+multiplayer/co-op: no
+
 release date: june 19, 2020
 
 price: $2.86 (ty a.e.p.)
