--- a/reviews/_posts/2021-04-30-returnal.md
+++ b/reviews/_posts/2021-04-30-returnal.md
@@ -34,6 +34,16 @@ reviewed on: ps5
 - value: 7/10
 - personal grade: 9/10
 
+pros:
+- awesome level/boss design
+- variety of weapons/upgrades
+- immersive environment
+- engaging story
+
+cons:
+- rng based collectibles for platinum trophy
+- limited unlockables, end game replayability
+
 **total score: 8.4/10**
 
 **buy at full price, sale, never: sale**
