--- a/reviews/_posts/2021-05-07-re8.md
+++ b/reviews/_posts/2021-05-07-re8.md
@@ -35,6 +35,16 @@ reviewed on: pc
 - personal grade: 9/10
 - was it scary? certain points +0.5
 
+pros:
+- great world building/setting
+- variety of weapons/upgrades
+- crafting
+
+cons:
+- rushed story, could have used more backstory/build up
+- strays more towards "action shooter" than old school survival horror
+- static scripted ai
+
 **total score: 8.6/10**
 
 **buy at full price, sale, never: full**
