--- a/reviews/_posts/2021-05-27-nr.md
+++ b/reviews/_posts/2021-05-27-nr.md
@@ -1,7 +1,7 @@
 ---
 layout: date
 title: "nier replicant ver.1.22474487139..."
-date:   2021-05-27
+date:   2021-04-23
 categories: self
 ---
 
@@ -29,8 +29,8 @@ reviewed on: ps5
 - audio: 10/10
 - gameplay: 8/10
 - narrative: 10/10
-- challenge: 8/10
-- replayability: 9/10
+- challenge: 7/10
+- replayability: 8/10
 - value: 8/10
 - personal grade: 9/10
 
@@ -43,21 +43,21 @@ cons:
 - repetitive backtracking, forced walking
 - unskippable "novel" reading
 - wonky camera sometimes
+- extremely grindy rng for the platinum trophy
 
 
-**total score: 8.9/10**
+**total score: 8.6/10**
 
 **buy at full price, sale, never: full**
 
-**hours spent on the game: 15 hours+**
+**hours spent on the game: 35 hours+**
 
-**platinumed? in progress**
+**platinumed? no**
 
 music: 
 - hills of radiant winds
 - song of the ancients
 - dance of the evanescent
 - ashes of dreams
-- more to be added!
 
 
