--- a/reviews/_posts/2021-06-10-ff7ri.md
+++ b/reviews/_posts/2021-06-10-ff7ri.md
@@ -38,17 +38,19 @@ pros:
 - great introduction/character building of yuffie
 - challenging & unique boss fights/mini games
 - good twist on the combat system (synergize with sonon)
+- runs at 4k/60fps with very fast loading times
 
 cons:
 - rushed backstory of sonon
 - should have been included in the base game
+- re-used base game assets
 
 
 **total score: 9/10**
 
-**buy at full price, sale, never: full**
+**buy at full price, sale, never: full only if you love the base game, otherwise sale**
 
-**hours spent on the game: 18 hours**
+**hours spent on the game: 30 hours**
 
 **platinumed? n/a but all trophies obtained**
 
@@ -61,9 +63,9 @@ music:
 
 new bosses:
 - gigantipede
+- ramuh
 - crimson mare (scarlet)
 - nero the sable
 - weiss the immaculate
-- ramuh
 - pride and joy mk 0.5
 
